resources/app/emg.css
/* ... */
html::-webkit-scrollbar,#cheatList::-webkit-scrollbar,#cheatPrint::-webkit-scrollbar,#log::-webkit-scrollbar,#romBrowser::-webkit-scrollbar{width:16px}
html::-webkit-scrollbar-track,html #cheatList::-webkit-scrollbar-track,html #cheatPrint::-webkit-scrollbar-track,html #log::-webkit-scrollbar-track,html #romBrowser::-webkit-scrollbar-track{background-color:#0f0f0f}
html::-webkit-scrollbar-thumb,html #cheatList::-webkit-scrollbar-thumb,html #cheatPrint::-webkit-scrollbar-thumb,html #log::-webkit-scrollbar-thumb,html #romBrowser::-webkit-scrollbar-thumb{background-color:#777}
html::-webkit-scrollbar-thumb:hover,html #cheatList::-webkit-scrollbar-thumb:hover,html #cheatPrint::-webkit-scrollbar-thumb:hover,html #log::-webkit-scrollbar-thumb:hover,html #romBrowser::-webkit-scrollbar-thumb:hover{background-color:#555}
.light::-webkit-scrollbar-track,.light #cheatList::-webkit-scrollbar-track,.light #cheatPrint::-webkit-scrollbar-track,.light #log::-webkit-scrollbar,.light #romBrowser::-webkit-scrollbar-track{background-color:#eaeaea}
.light::-webkit-scrollbar-thumb,.light #cheatList::-webkit-scrollbar-thumb,.light #cheatPrint::-webkit-scrollbar-thumb,.light #log::-webkit-scrollbar-thumb,.light #romBrowser::-webkit-scrollbar-thumb{background-color:#bbb}
.light::-webkit-scrollbar-thumb:hover,.light #cheatList::-webkit-scrollbar-thumb:hover,.light #cheatPrint::-webkit-scrollbar-thumb:hover,.light #log::-webkit-scrollbar-thumb:hover,.light #romBrowser::-webkit-scrollbar-thumb:hover{background-color:#999}

[type=checkbox]{position:relative;top:5.5px;left:2px;width:23px;height:23px;margin:0 5px;cursor:pointer;-moz-appearance:none;-webkit-appearance:none;appearance:none;outline:0;border:2px solid #ccc;border-radius:3px;transition:border-color .2s cubic-bezier(.4,0,.22,1)}
[type=checkbox]:before{content:'';position:absolute;left:-2px;top:1px;width:100%;height:50%;border:4px solid #ccc;border-radius:0;border-top-style:none;border-right-style:none;border-color:transparent;transform:scale(.5) rotate(-45deg);transition:border-color .1s cubic-bezier(.4,0,.22,1)}
[type=checkbox]:checked,[type=checkbox]:checked:before{border-color:rgb(33,125,255)}
[type=checkbox]:focus,[type=checkbox]:hover,[type=checkbox]:focus:checked:before,[type=checkbox]:hover:checked:before{border-color:rgb(63,155,255)}
.light [type=checkbox]{border-color:#333}
.light [type=checkbox]:checked,.light [type=checkbox]:checked:before{border-color:rgb(13,105,235)}
.light [type=checkbox]:focus,.light [type=checkbox]:hover,.light [type=checkbox]:focus:checked:before,.light [type=checkbox]:hover:checked:before{border-color:rgb(43,135,255)}

.palette-red .headline,.palette-red header{background-color:rgb(158,33,50)}
.palette-red [type=checkbox]:checked,.palette-red [type=checkbox]:checked:before{border-color:rgb(225,78,90)}
.palette-red [type=checkbox]:focus,.palette-red [type=checkbox]:hover,.palette-red [type=checkbox]:focus:checked:before,.palette-red [type=checkbox]:hover:checked:before{border-color:rgb(255,108,120)}
.light.palette-red .headline,.light.palette-red header{background-color:rgb(188,53,70)}
.light.palette-red [type=checkbox]:checked,.light.palette-red [type=checkbox]:checked:before{border-color:rgb(205,58,70)}
.light.palette-red [type=checkbox]:focus,.light.palette-red [type=checkbox]:hover,.light.palette-red [type=checkbox]:focus:checked:before,.light.palette-red [type=checkbox]:hover:checked:before{border-color:rgb(235,88,100)}

.palette-purple .headline,.palette-purple header{background-color:rgb(100,65,195)}
.palette-purple [type=checkbox]:checked,.palette-purple [type=checkbox]:checked:before{border-color:rgb(180,130,230)}
.palette-purple [type=checkbox]:focus,.palette-purple [type=checkbox]:hover,.palette-purple [type=checkbox]:focus:checked:before,.palette-purple [type=checkbox]:hover:checked:before{border-color:rgb(210,160,255)}
.light.palette-purple .headline,.light.palette-purple header{background-color:rgb(115,80,200)}
.light.palette-purple [type=checkbox]:checked,.light.palette-purple [type=checkbox]:checked:before{border-color:rgb(140,90,190)}
.light.palette-purple [type=checkbox]:focus,.light.palette-purple [type=checkbox]:hover,.light.palette-purple [type=checkbox]:focus:checked:before,.light.palette-purple [type=checkbox]:hover:checked:before{border-color:rgb(170,120,220)}

.palette-ice .headline,.palette-ice header{background-color:rgb(10,115,180)}
.palette-ice [type=checkbox]:checked,.palette-ice [type=checkbox]:checked:before{border-color:rgb(33,150,243)}
.palette-ice [type=checkbox]:focus,.palette-ice [type=checkbox]:hover,.palette-ice [type=checkbox]:focus:checked:before,.palette-ice [type=checkbox]:hover:checked:before{border-color:rgb(63,180,255)}
.light.palette-ice .headline,.light.palette-ice header{background-color:rgb(30,135,200)}
.light.palette-ice [type=checkbox]:checked,.light.palette-ice [type=checkbox]:checked:before{border-color:rgb(13,130,223)}
.light.palette-ice [type=checkbox]:focus,.light.palette-ice [type=checkbox]:hover,.light.palette-ice [type=checkbox]:focus:checked:before,.light.palette-ice [type=checkbox]:hover:checked:before{border-color:rgb(43,160,253)}

input{font-family:hind,sans-serif;font-size:17px;letter-spacing:.5px;color:#fff}
[type=text]{text-transform:capitalize;font-size:16px;max-width:100px;text-align:center;height:19px;border:0;outline:0;padding:5px;transition:background-color .2s cubic-bezier(.4,0,.22,1);margin:0;background-color:rgba(255,255,255,.08);appearance:none}
[type=text]:hover,[type=text]:active,[type=text]:focus{background-color:#ccc}

button,select,input,.box,.pointer,select + label,[type=checkbox] + label,[type=color] + label,[type=range],[type=range] + label{cursor:pointer}
[type=checkbox]:disabled,[type=checkbox]:disabled + label,select:disabled,select:disabled + label,[type=range]:disabled,[type=range]:disabled + label{cursor:initial}

[type=color]{border:0;outline:0;background:none;position:relative;top:2px}
/* ... */

